// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reaching communities processor customer email 1`] = `
" Thank you for getting in touch with us.

You will see a copy of the information you submitted below. This will be forwarded to one of our funding officers who will get in
touch within fifteen working days to let you know if we can help.

In the meantime, you can find out more about our funding and how we can support your community on our website: 
www.tnlcommunityfund.org.uk/england [https://www.tnlcommunityfund.org.uk/england]

Thanks,

The National Lottery Community Fund

YOUR INFORMATION
YOUR IDEA
BRIEFLY EXPLAIN YOUR IDEA AND WHY IT’LL MAKE A DIFFERENCE
Test idea

PROJECT LOCATION
SELECT ALL REGIONS THAT APPLY
South West

PROJECT LOCATION
London

YOUR ORGANISATION
LEGAL NAME
Test Organisation

YOUR DETAILS
FIRST NAME
Example

LAST NAME
Person

EMAIL ADDRESS
example@example.com

PHONE NUMBER
03454102030

DATA PROTECTION
The National Lottery Community Fund is a public body with a duty to distribute National Lottery and other money in grants for good
causes. We use the personal data you provide, such as contact details for individuals at your organisation, to help you apply for
a grant and to assess your application. We may share your personal data with organisations which help us with our grant making
activities or others which have a legitimate interest in our work or have funded your grant. We will only share personal data
which they need to carry out their work and subject to appropriate safety measures. Our Data Protection and Privacy Notice gives
more information about how we store and use personal data and the lawful basis for this. Please read the full Notice which is
published on our website at www.tnlcommunityfund.org.uk/data-protection [https://www.tnlcommunityfund.org.uk/data-protection] or
contact us to request a hard copy. The Notice may be updated from time to time."
`;

exports[`reaching communities processor internal email 1`] = `
" A CUSTOMER HAS SUBMITTED AN IDEA FROM THE REACHING COMMUNITIES & PARTNERSHIPS WEB FORM.
The details they provided are included below:

CUSTOMER INFORMATION
YOUR DETAILS
FIRST NAME
Example

LAST NAME
Person

EMAIL ADDRESS
example@example.com

PHONE NUMBER
03454102030

YOUR ORGANISATION
LEGAL NAME
Test Organisation

PROJECT LOCATION
SELECT ALL REGIONS THAT APPLY
South West

PROJECT LOCATION
London

YOUR IDEA
BRIEFLY EXPLAIN YOUR IDEA AND WHY IT’LL MAKE A DIFFERENCE
Test idea"
`;
